--- a/composer.json
+++ b/composer.json
@@ -49,29 +49,29 @@
 
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/collections": "^2.2",
-        "doctrine/persistence": "^3.3",
+        "doctrine/persistence": "^3.4",
         "doctrine/orm": "^2.20 || ^3.3",
         "doctrine/dbal": "^3.9 || ^4.2",
 
         "psr/clock": "^1.0",
 
-        "dragonmantank/cron-expression": "^3.3",
+        "dragonmantank/cron-expression": "^3.4",
         "ramsey/collection": "^2.0"
     },
     "require-dev":{
-        "shipmonk/composer-dependency-analyser": "^1.7",
+        "shipmonk/composer-dependency-analyser": "^1.8",
         "doctrine/coding-standard": "^12.0",
-        "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "^3.10",
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.11",
         "phpstan/phpstan": "^1.12",
         "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-phpunit": "^1.4",
         "phpstan/phpstan-strict-rules": "^1.6",
         "phpstan/phpstan-symfony": "^1.4",
         "phpstan/phpstan-doctrine": "^1.5",
-        "phpunit/phpunit": "^11.4",
-        "symfony/var-dumper": "^7.1",
-        "symfony/clock": "^7.1"
+        "phpunit/phpunit": "^11.5",
+        "symfony/var-dumper": "^7.2",
+        "symfony/clock": "^7.2"
     },
     "autoload": {
         "psr-4": {
